# Librarry

./: .gitignore  README.md  config.example.yaml  pyproject.toml
deploy/: bootstrap-mediaprod.py  docker-compose.yml  librarry.cron  librarry.service  patch-traefik.py  traefik-snippet.yml
scripts/: install.sh
src/librarry/: __init__.py  auth.py  cli.py  config.py  db.py  hardcover.py  kindle.py  metadata.py  quality.py  secrets_resolver.py  users.py  vault.py
src/librarry/clients/: __init__.py  qbittorrent.py  sabnzbd.py
src/librarry/indexers/: __init__.py  newznab.py
src/librarry/webui/: __init__.py  app.py
src/librarry/workers/: __init__.py  annas.py  check.py  hardcover_sync.py  import_book.py  libgen.py  poll.py  search.py
tests/: test_annas.py  test_check.py  test_hardcover.py  test_import_book.py  test_indexers.py  test_kindle.py  test_libgen.py  test_metadata.py  test_poll.py  test_quality.py  test_sabnzbd.py  test_scan_library.py  test_secrets_resolver.py  test_vault.py  test_webui.py
