[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "librarry"
version = "0.1.0"
description = "Librarry — Hardcover-first ebook orchestrator with Newznab, Torznab, SABnzbd, and qBittorrent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "cryptography>=42.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pymupdf>=1.24",  # PDF cover/metadata embedding for Kindle
    "python-multipart>=0.0.9",  # file uploads (replace book file)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
librarry = "librarry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
